# Pure_C

./: .gitignore
.metadata/: version.ini
00-Alura-00-Template/: .project
00-Alura-01-C-Part1/: .project
00-Alura-01-C-Part1-Ex02-Tabuada/: .project
00-Alura-01-C-Part1-Ex02-Tabuada/src/: main.c
00-Alura-01-C-Part2/: .project
00-Application-00-Template/: .project
00-Application-01-Abstraction_Project/: .cproject
00-Application-03-Abstraction_Project_Makefile2/: prog
00-Application-03-Scheduler/: .cproject
00-Application-03-Scheduler/Debug/: 00-Application-03-Scheduler  makefile
00-Application-03-Scheduler/include/: scheduler.h
00-Application-03-Scheduler/src/: main.c  scheduler.c
00-Application-04-DataBase_MySQL/: .project
00-Basic-00-Template/: .project
00-DataStructure-00-Template/: .project
00-DesignPatterns-02-Polymorphism/: queue.h
00-Estrutura_de_Dados_Descomplicada-00-Template/src/: ListaSequencial.c  ListaSequencial.h
00-Estrutura_de_Dados_Descomplicada-01-Modulolarizacao/: .cproject
00-Estrutura_de_Dados_Descomplicada-01-Modulolarizacao/include/: Ponto.h
00-Estrutura_de_Dados_Descomplicada-02-ListaLInearEstatica/: .project
00-Estrutura_de_Dados_Descomplicada-02-ListaLInearEstatica/src/: ListaSequencial.h
00-Estrutura_de_Dados_Descomplicada-03-ListaDinaminca/: .project
00-Estrutura_de_Dados_Descomplicada-03-ListaDinaminca/src/: ListaDinEnc.c  ListaDinEnc.h  menu.h
00-Estrutura_de_Dados_Descomplicada-04-ListaEncDupla/src/: ListaDinEncadDupla.c  ListaDinEncadDupla.h
00-Estrutura_de_Dados_Descomplicada-05-ListaDinEncadCirc/: .project
00-Estrutura_de_Dados_Descomplicada-05-ListaDinEncadCirc/src/: ListaDinEncadCirc.c  ListaDinEncadCirc.h
00-Estrutura_de_Dados_Descomplicada-06-ListaDinEncadDesc/: .project
00-Estrutura_de_Dados_Descomplicada-06-ListaDinEncadDesc/src/: ListaDinEncadDesc.h
00-Estrutura_de_Dados_Descomplicada-07-FilaEstatica/: .project
00-Examples-01-Client/: .project
00-Examples-01-Client/src/: main.c
00-Linguagem_C_Descomplicada-01-Recursao/: .project
00-Linguagem_C_Descomplicada-02-Arquivos/: .project
00-Linguagem_C_Descomplicada-04-ParseFile/: .project
00-Linguagem_C_Descomplicada-07-TemporaryVariable/: .project
00-Linguagem_C_Descomplicada-Lista-00-Template/: .project
00-Linguagem_C_Descomplicada-Lista-01-EX01/: .project
00-Linguagem_C_Descomplicada-Lista-01-EX02/: .project
00-Linguagem_C_Descomplicada-Lista-01-EX03/: .project
00-Linguagem_C_Descomplicada-Lista-01-EX05/: .project
00-Linguagem_C_Descomplicada-Lista-01-EX06/: .project
00-Linguagem_C_Descomplicada-Lista-01-EX07/: .project
00-Linguagem_C_Descomplicada-Lista-01-EX08/: .project
00-Linguagem_C_Descomplicada-Lista-01-EX09/: .project
00-Linguagem_C_Descomplicada-Lista-01-EX13/: .project
00-Linguagem_C_Descomplicada-Lista-01-EX16/: .project
00-Linguagem_C_Descomplicada-Lista-01-EX17/: .project
00-Linguagem_C_Descomplicada-Lista-01-EX18/: .project
00-Linguagem_C_Descomplicada-Lista-01-EX19/: .project
00-Linguagem_C_Descomplicada-Lista-01-EX21/: .project
00-Linguagem_C_Descomplicada-Lista-01-EX23/: .project
00-Linguagem_C_Descomplicada-Lista-01-EX25/: .project
00-Linguagem_C_Descomplicada-Lista-01-EX26/: .project
00-Linguagem_C_Descomplicada-Lista-01-EX28/: .project
00-Linguagem_C_Descomplicada-Lista-01-EX31/: .project
00-Linguagem_C_Descomplicada-Lista-01-EX33/: .project
00-Linguagem_C_Descomplicada-Lista-01-EX34/: .project
00-Linguagem_C_Descomplicada-Lista-01-EX35/: .project
00-Linguagem_C_Descomplicada-Lista-01-EX38/: .project
00-Linguagem_C_Descomplicada-Lista-01-EX39/: .project
00-Linguagem_C_Descomplicada-Lista-01-EX4/: .project
00-Linguagem_C_Descomplicada-Lista-01-EX6/: .project
00-Linguagem_C_Descomplicada-Lista-01-EX9/: .project
00-Linguagem_C_Descomplicada-Lista-02-EX01/: main.c
00-Linux-00-Template/: .project
00-Linux-07-Tiff/: .project
00-Linux-ALP_CH01-00-Template/: .project
00-Linux-ALP_CH01-01-HelloWorld/: .Makefile.swp  .config.mk.swp  .project  Makefile  app
00-Linux-ALP_CH02-00-Template/: .project
00-Linux-ALP_CH02-01-ARG_LIST/: .project
00-Linux-ALP_CH10-00-Template/: .project
00-OpenGL-00-Template/: .cproject
00-OpenGL-01-HelloWorld/: .cproject  .project
00-OpenGL-02-Triangle/: .cproject  .project
00-POC-03-MallocRegister/: .project
00-POC-05-SharedMemoryRead/: .project
00-POC-07-MessageQueueWriter/: queue_writer  queue_writer.c
00-POC-08-MessageQueueReader/: queue_reader  queue_reader.c
00-POC-09-ChildProcess/: prog
00-POC-10-MessageQueueWriter_mq/: prog
00-POC-12-Makefile2/: .project  Makefile
00-POC-13-Makefile3/: prog
00-POC-24-Daemon/: cris-daemon.service
00-Template/: .project
00-Threads-00-Template/: .project
00-Threads-02-Ex1/: .cproject  .project
00-Threads-02-Ex2/: .project
00-Threads-04-MutexExample/: .cproject  .project
00-Threads-05-ConditionExample/: .cproject  .project
03-POC/porting/arch/: CMakeLists.txt
03-POC/sendmail/: senmail
03-POC/server_no_thread/: CMakeLists.txt  compile.sh  server.c
09-BLP/CH15/: CMakeLists.txt
10-projects/rover_rasp/rover_system/: CMakeLists.txt  client.c  manager.c  motor_control.c  rover_launch.c  rover_unlaunch.c  server.c  servo_control.c
10-projects/rover_rasp/rover_system/driver/include/: hc_sr04.h  motors.h  motors_action.h  servo.h  servo_action.h
10-projects/rover_rasp/rover_system/driver/src/: hc_sr04.c  motors.c  servo.c  servo_action.c
10-projects/rover_rasp/rover_system/include/: actions.h  hc_sr04.h  manager.h  motors.h  rover_status.h  rover_types.h
10-projects/rover_rasp/rover_system/lib/include/: file.h  log.h  queue.h  rover_types.h  sema.h  shared_memory.h
10-projects/rover_rasp/rover_system/lib/src/: file.c  log.c  queue.c  sema.c  shared_memory.c
10-projects/rover_rasp/rover_system/src/: action.c  actions.c  hc_sr04.c  motors.c  rover_client.c  rover_launch.c  rover_manager.c  rover_motor_control.c  rover_server.c  rover_servo_control.c
10-projects/rover_rasp/rover_system/tests/: test_motors.c  test_servo.c  test_ultrasonic.c
(+183 files in other folders)
